test/golden/-7033096789363194467.golden

INITIALPATH:7:22: error:
    • No instance for (PyFToString Bool) arising from a use of ‘pyfToString’
    • In the second argument of ‘(.)’, namely ‘pyfToString’
      In the expression: (PyF.Formatters.formatString (PyF.Internal.QQ.newPaddingKForString PyF.Internal.QQ.PaddingDefaultK)) Nothing . pyfToString
      In the first argument of ‘putStrLn’, namely ‘(((PyF.Formatters.formatString (PyF.Internal.QQ.newPaddingKForString PyF.Internal.QQ.PaddingDefaultK)) Nothing . pyfToString) True)’
  |
7 | main = putStrLn [fmt|{True:s}|]
  |                      ^^^^^^^^^^
